<resources>
    <string name="app_name">磨房</string>
    <string name="zero">0</string>
    <string name="six">6</string>
    <string name="tan">10</string>
    <string name="second_sixty">60秒</string>
    <string name="second">秒</string>
    <string name="confirm">确定</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="complete">完成</string>
    <string name="save_fail">保存失败</string>
    <string name="roll_back">返回</string>
    <string name="all">全部</string>
    <string name="only_spinsor">只看发起的活动</string>
    <string name="only_join">只看参与的活动</string>
    <string name="event_recruiting">召集中</string>
    <string name="event_full">已满员</string>
    <string name="event_expiration">已截止</string>
    <string name="event_finish">已结束</string>
    <string name="event_cancel">已取消</string>
    <string name="event_close">已删除</string>
    <string name="comment">评论</string>
    <string name="comment_title">被评论的</string>
    <string name="like">赞</string>
    <string name="action">活动</string>
    <string name="add86">+86</string>
    <string name="tick">勾选</string>
    <string name="say_something">说点什么吧...</string>
    <string name="consent">同意</string>
    <string name="submit">提    交</string>
    <string name="bind">绑   定</string>
    <string name="who">谁谁谁</string>
    <string name="autograph">个性签名</string>
    <string name="live_telecast">直播</string>
    <string name="choose_image">选择图片</string>
    <string name="unable_connect_network">无法连接到网络</string>
    <string name="unable_connect_server">无法连接到服务器</string>
    <string name="server_err">服务器异常</string>
    <string name="net_connect_err">网络好像有点问题</string>
    <string name="network_anomaly">出错啦!</string>
    <string name="common_load_more_end">没有了</string>
    <string name="wechat_packagename">com.tencent.mm</string>
    <string name="wechat_notice">温馨提示</string>
    <string name="wechat_not_install">您的设备没有安装微信</string>
    <string name="login">登录</string>
    <string name="logging">登录中...</string>
    <string name="user_not_exist">用户不存在</string>
    <string name="password_error">密码错误</string>
    <string name="register">注册</string>
    <string name="in_register">注册中，请稍候...</string>
    <string name="register_succeed">注册成功</string>
    <string name="look_around">随便看看</string>
    <string name="forget_password">忘记密码</string>
    <string name="user_name_input_hint">用户名/邮箱/手机</string>
    <string name="password_input_hint">登录密码</string>
    <string name="register_phone_numder">手机号码</string>
    <string name="phone_already_been_register">手机号已注册</string>
    <string name="phone_not_register">手机号未注册</string>
    <string name="phone_already_been_register_hint">输入的手机号已经注册过，可直接登录</string>
    <string name="phone_not_register_hint">输入的手机号未注册，可立即注册</string>
    <string name="register_verify_code">验证码</string>
    <string name="register_get_verify_code">获取验证码</string>
    <string name="register_get_again_vcode">重新获取</string>
    <string name="agreement">用户协议</string>
    <string name="agreement_title1">一、总则</string>
    <string name="agreement_content1">\t\t1.1 磨房社区www.doyouhike.net的所有权和运营权归深圳市载途科技有限公司所有。\n\n
									  \t\t1.2 用户在使用本社区的服务之前，应当仔细阅读本协议，并同意遵守本协议及所有社区规则后方可成为磨房用户，一旦用户注册成功，则用户与本社区之间自动形成协议关系，用户应当受本协议及所有社区规则的约束。用户在使用特殊的服务或产品时，应当同意接受相关协议后方能使用。\n\n
									  \t\t1.3 本协议、社区规则可由本社区随时更新，用户在使用磨房产品时应当及时关注，用户同意本社区不承担通知义务。本社区的通知、公告、声明或其它类似内容是本协议及社区规则的一部分。
</string>
    <string name="agreement_title2">二、服务内容 </string>
    <string name="agreement_content2">\t\t2.1 本社区网络服务的具体内容由本社区根据实际情况提供，例如论坛、相册、圈子等。\n\n
									  \t\t2.2 本社区仅提供相关的网络服务，除此之外与相关网络服务有关的设备(如个人电脑、手机、及其他与接入互联网或移动网有关的装置)及所需的费用(如为接入互联网而支付的电话费及上网费、为使用移动网而支付的手机费)均应由用户自行负担。
</string>
    <string name="agreement_title3">三、用户账号 </string>
    <string name="agreement_content3">\t\t3.1 用户可通过以下方式注册成为磨房社区的正式用户：\n\n
									  \t\t(1)经本社区会员系统完成注册程序并通过身份认证的用户；成为磨房正式用户即获得本社区规定用户所应享有的一切权限。磨房社区有权对会员的权限设计进行变更。\n\n
									  \t\t3.2 用户帐号注册：\n\n
									  \t\t(1)使用本社区会员系统注册的用户，只能使用汉字、英文字母、数字、下划线及它们的组合，禁止使用空格、各种符号和特殊字符。\n\n
									  \t\t3.3 如发现用户帐号中含有不雅文字或不恰当名称的，本社区保留取消其用户资格的权利。\n\n
									  \t\t(1)请勿以党和国家领导人或其他社会名人的真实姓名、字号、艺名、笔名注册；\n
									  \t\t(2)请勿以国家机构或其他机构的名称注册；\n
									  \t\t(3)请勿注册不文明、不健康名字，或包含歧视、侮辱、猥亵类词语的帐号；\n
									  \t\t(4)请勿注册易产生歧义、引起他人误解或其它不符合法律规定的帐号。\n\n
									  \t\t3.4 用户帐号的所有权归本社区，用户仅享有使用权。\n\n
									  \t\t3.5 用户有义务保证密码和帐号的安全，用户利用该密码和帐号所进行的一切活动引起的任何损失或损害，由用户自行承担全部责任，本社区不承担任何责任。如用户发现帐号遭到未授权的使用或发生其他任何安全问题，应立即修改帐号密码并妥善保管，如有必要，请通知本社区。因黑客行为或用户的保管疏忽导致帐号非法使用，本社区不承担任何责任。
</string>
    <string name="agreement_title4">四、使用规则 </string>
    <string name="agreement_content4">\t\t4.1 遵守中华人民共和国相关法律法规，包括但不限于《中华人民共和国计算机信息系统安全保护条例》、《计算机软件保护条例》、《最高人民法院关于审理涉及计算机网络著作权纠纷案件适用法律若干问题的解释(法释[2004]1号)》、《全国人大常委会关于维护互联网安全的决定》、《互联网电子公告服务管理规定》、《互联网新闻信息服务管理规定》、《互联网著作权行政保护办法》和《信息网络传播权保护条例》等有关计算机互联网规定和知识产权的法律和法规、实施办法。\n\n
									  \t\t4.2 用户对其自行发表、上传或传送的内容负全部责任，所有用户不得在本社区任何页面发布、转载、传送含有下列内容之一的信息，否则本社区有权自行处理并不通知用户：\n\n
									  \t\t(1)违反宪法确定的基本原则的；\n
									  \t\t(2)危害国家安全，泄漏国家机密，颠覆国家政权，破坏国家统一的；\n
									  \t\t(3)损害国家荣誉和利益的；\n
									  \t\t(4)煽动民族仇恨、民族歧视，破坏民族团结的；\n
									  \t\t(5)破坏国家宗教政策，宣扬邪教和封建迷信的；\n
									  \t\t(6)散布谣言，扰乱社会秩序，破坏社会稳定的；\n
									  \t\t(7)散布淫秽、色情、赌博、暴力、恐怖或者教唆犯罪的；\n
									  \t\t(8)侮辱或者诽谤他人；\n
									  \t\t(9)煽动非法集会、结社、游行、示威、聚众扰乱社会秩序的；\n
									  \t\t(10)以非法民间组织名义活动的；\n
									  \t\t(11)含有法律、行政法规禁止的其他内容的。\n
									  \t\t(12)含有虚假、有害、胁迫、恐吓、侵害他人隐私、骚扰、中伤、粗俗、猥亵、种族歧视、地域歧视或其它道德上令人反感的内容。\n\n
									  \t\t4.3 用户承诺对其发表或者上传于本社区的所有信息(即属于《中华人民共和国著作权法》规定的作品，包括但不限于文字、图片、音乐、电影、表演和录音录像制品和电脑程序等)均享有完整的知识产权，或者已经得到相关权利人的合法授权；如用户违反本条规定造成本社区被第三人索赔的，用户应全额补偿本社区一切费用(包括但不限于各种赔偿费、诉讼代理费及为此支出的其它合理费用)；\n\n
									  \t\t4.4 当第三方认为用户发表或者上传于本社区的信息侵犯其权利，并根据《信息网络传播权保护条例》或者相关法律规定向本社区发送权利通知书时，用户同意本社区可以自行判断决定删除涉嫌侵权信息，除非用户提交书面证据材料排除侵权的可能性，本社区将不会自动恢复上述删除的信息；\n\n
									  \t\t(1)不得为任何非法目的而使用网络服务系统；\n
									  \t\t(2)遵守所有与网络服务有关的网络协议、规定和程序；\n
									  \t\t(3)不得利用本社区服务进行任何不利于本社区的行为。\n\n
									  \t\t4.5 如用户在使用网络服务时违反上述任何规定，本社区有权要求用户改正或直接采取一切必要的措施(包括但不限于删除用户张贴的内容、暂停或终止用户使用网络服务的权利)以减轻用户不当行为而造成的影响。 
</string>
    <string name="agreement_title5">五、隐私保护 </string>
    <string name="agreement_content5">\t\t5.1 本社区不对外公开或向第三方提供单个用户的注册资料及用户在使用网络服务时存储在本社区的非公开内容，但下列情况除外：\n\n
									  \t\t(1)事先获得用户的明确授权；\n
									  \t\t(2)根据有关的法律法规要求；\n
									  \t\t(3)按照相关政府主管部门的要求；\n
									  \t\t(4)为维护社会公众的利益。
</string>
    <string name="agreement_title6">六、版权声明</string>
    <string name="agreement_content6">\t\t6.1 用户发表在磨房网站上的内容，如果没有作者本人的特别声明，均使用知识共享 署名-非商业性使用-相同方式共享 2.5 许可协议。\n\n
									  \t\t6.2 本社区特有的标识、版面设计、编排方式等版权均属本社区享有，未经本社区许可，不得任意复制或转载。\n\n
									  \t\t6.3 用户从本社区的服务中获得的信息，未经本社区许可，不得任意复制或转载。\n\n
									  \t\t6.4 使用本社区的任何内容均应注明"来源于磨房社区(www.doyouhike.net)"及署上作者姓名，按法律规定需要支付稿酬的，应当通知本社区及作者及支付稿酬，并独立承担一切法律责任。\n\n
									  \t\t6.5 本社区享有所有作品用于其它用途的使用权和优先权，包括但不限于网站、电子杂志、平面出版等，作者在本社区发布内容时视为同意本条款。\n\n
									  \t\t6.6 本社区所有内容仅代表作者自己的立场和观点，与本社区无关，由作者本人承担一切法律责任。\n\n
									  \t\t6.7 恶意转载本社区内容的，本社区保留将其诉诸法律的权利。

</string>
    <string name="agreement_title7">七、责任声明 </string>
    <string name="agreement_content7">\t\t7.1 用户明确同意其使用本社区网络服务所存在的风险及一切后果将完全由用户本人承担，本社区对此不承担任何责任。\n\n
									  \t\t7.2 本社区无法保证网络服务一定能满足用户的要求，也不保证网络服务的及时性、安全性、准确性。\n\n
									  \t\t7.3 本社区不保证为方便用户而设置的外部链接的准确性和完整性，同时，对于该等外部链接指向的不由本社区实际控制的任何网页上的内容，本社区不承担任何责任。\n\n
									  \t\t7.4 对于因不可抗力或本社区不能控制的原因造成的网络服务中断或其它缺陷，本社区不承担任何责任，但将尽力减少因此而给用户造成的损失和影响。\n\n
									  \t\t7.5 对于本社区向用户提供的下列产品或者服务的质量缺陷本身及其引发的任何损失，本社区无需承担任何责任：\n\n
									  \t\t(1)本社区向用户免费提供的各项网络服务；\n
									  \t\t(2)本社区向用户赠送的任何产品或者服务；\n\n
									  \t\t7.6 本社区有权于任何时间暂时或永久修改或终止本服务(或其任何部分)，而无论其通知与否，本社区对用户和任何第三人均无需承担任何责任。
</string>
    <string name="agreement_title8">八、附则</string>
    <string name="agreement_content8">\t\t8.1 本协议的订立、执行和解释及争议的解决均应适用中华人民共和国法律。\n\n
									  \t\t8.2 如本协议中的任何条款无论因何种原因完全或部分无效或不具有执行力，本协议的其余条款仍应有效并且有约束力。\n\n
									  \t\t8.3 本协议解释权及修订权归深圳市载途科技有限公司所有。
</string>
    <string name="finish_input">我输入好了</string>
    <string name="register_user_name_input_hint">江湖人称</string>
    <string name="register_user_name_input_warning">大侠，磨房规矩，名号确定了就不能改了</string>
    <string name="register_user_name_confirm">我就叫这个</string>
    <string name="register_user_name_too_short">名号再短也要有两个字</string>
    <string name="register_user_name_too_long">名号有点太长了，最长二十个字</string>
    <string name="register_input_new_password">输入你的新密码</string>
    <string name="register_hint_if_phone_halt">提示：如果您的手机已停用，请登录磨房网，\n用E-mail找回密码</string>
    <string name="register_bind_phone">绑定手机</string>
    <string name="register_please_bind_phone">大侠，请绑定您的手机号码</string>
    <string name="skip">跳过</string>
    <string name="please_input_long_phone_number">请输入的手机号码大于11位</string>
    <string name="please_input_short_phone_number">请输入的手机号码小于11位</string>
    <string name="please_input_legitimate_password">请输入6-20位密码</string>
    <string name="send_verify_code_failed">验证信息发送失败，请检查手机号码是否正确</string>
    <string name="verifying">验证码校验中，请稍后...</string>
    <string name="verify_code_is_wrong">验证码错误</string>
    <string name="nickname_is_exist_try_other">昵称已存在，试试别的？</string>
    <string name="follow">关注</string>
    <string name="following">已关注</string>
    <string name="go_follow">前往关注</string>
    <string name="cancel_follow">取消关注</string>
    <string name="no_follow">暂时没有关注</string>
    <string name="no_follow_hint">去发现更多有趣的人吧！</string>
    <string name="follower">粉丝</string>
    <string name="no_follower_me">暂时没有粉丝</string>
    <string name="no_follower_hint_me">获得关注,从关注他人开始</string>
    <string name="no_follower_other">没有任何人关注TA</string>
    <string name="no_follower_hint_other">好可怜,给个关注吧</string>
    <string name="home">动态</string>
    <string name="four_space"></string>
    <string name="day">天</string>
    <string name="post_forwarding">发布的帖子</string>
    <string name="post">贴子</string>
    <string name="hot">热门</string>
    <string name="search_user">搜索用户</string>
    <string name="add_user">添加关注</string>
    <string name="phone_adress_book">手机通讯录</string>
    <string name="about_the_friends_of_phone_adress">关注手机通讯录中的好友</string>
    <string name="recommend_attention">推荐关注</string>
    <string name="repost">举报</string>
    <string name="share_dialog_delete">删除</string>
    <string name="sure_to_report">确认举报</string>
    <string name="please_select_report_reason">请选择举报原因</string>
    <string name="edit_event_tint">户外运动，通常大家会写：\n备用线路（下撤点）、活动强度、集合地点、行程计划、费用预算、装备要求、食品计划、风险提示等\n\n自助旅行，通常大家会写：\n\t【行程安排】包含交通方式、时间安排、景点等\n\t【预算】\n\t【自我介绍】可附上照片</string>
    <string name="copying">抄袭内容</string>
    <string name="invite_msg">我是%1$s，我在磨房，自助旅行和户外运动的出发地，下载：http://www.doyouhike.net/appdownload/mofangapp/download</string>
    <string name="save_pic">保存图片</string>
    <string name="action_search_nodata">没有找到相关内容</string>
    <string name="action_attend">参加活动</string>
    <string name="action_confirm">确认报名</string>
    <string name="action_name">姓名</string>
    <string name="action_phone">手机号码</string>
    <string name="action_message">活动留言</string>
    <string name="action_info">活动留言，请勿透漏个人资料</string>
    <string name="nickname">昵称</string>
    <string name="setting">设置</string>
    <string name="personal_message_title">个人信息</string>
    <string name="gender">性别</string>
    <string name="gender_girl">女</string>
    <string name="phone_number">手机号</string>
    <string name="bind_number">绑定手机号</string>
    <string name="city">城市</string>
    <string name="city_hint">未设置城市</string>
    <string name="profile_title">个人说明</string>
    <string name="change_passwrod">修改密码</string>
    <string name="change_passwrod_confirm">确认修改</string>
    <string name="old_password">原密码</string>
    <string name="old_password_hint">输入现有密码</string>
    <string name="new_password">新密码</string>
    <string name="new_password_hint">6~20位</string>
    <string name="new_passwrod_confirm">确认密码</string>
    <string name="new_passwrod_confirm_hint">再次输入新密码</string>
    <string name="feedback_suggest">反馈建议</string>
    <string name="want_to_say_to_us">想到我们说点什么？</string>
</resources>