<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llyt_this"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF48ADA0"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <!-- 标题栏 -->
    <net.doyouhike.app.bbs.ui.widget.common.TitleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:m_title="@string/agreement"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFFFF" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="17dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textColor="@color/txt_title_light_standard"
                    android:text="磨房社区用户注册协议"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:layout_marginTop="7dp"
                    android:background="@color/color_theme"/>

                <TextView
                    android:layout_marginTop="28.5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/agreement_title1"
                    android:textColor="@color/black_word"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/agreement_content1"
                    android:textColor="@color/black_word"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:text="@string/agreement_title2"
                    android:textColor="@color/black_word"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/agreement_content2"
                    android:textColor="@color/black_word"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:text="@string/agreement_title3"
                    android:textColor="@color/black_word"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/agreement_content3"
                    android:textColor="@color/black_word"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:text="@string/agreement_title4"
                    android:textColor="@color/black_word"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/agreement_content4"
                    android:textColor="@color/black_word"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:text="@string/agreement_title5"
                    android:textColor="@color/black_word"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/agreement_content5"
                    android:textColor="@color/black_word"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:text="@string/agreement_title6"
                    android:textColor="@color/black_word"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/agreement_content6"
                    android:textColor="@color/black_word"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:text="@string/agreement_title7"
                    android:textColor="@color/black_word"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/agreement_content7"
                    android:textColor="@color/black_word"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:text="@string/agreement_title8"
                    android:textColor="@color/black_word"
                    android:textSize="17sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:text="@string/agreement_content8"
                    android:textColor="@color/black_word"
                    android:textSize="15sp" />
            </LinearLayout>
        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/shape_titlebar_bottom_line" />
    </RelativeLayout>

</LinearLayout>