<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llyt_this"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <!-- 标题栏 -->
    <net.doyouhike.app.bbs.ui.widget.common.TitleView
        android:id="@+id/navigation_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/vi_activity_navi_height"
        app:left_src="@drawable/ic_back_3x"
        app:left_text="@string/setting"
        app:m_title="@string/change_passwrod"
        app:right_text="@string/change_passwrod_confirm"
        app:right_text_color="@color/txt_title_right" />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/llyt_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="64dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_setting_change_pw" />

        <LinearLayout
            android:id="@+id/rlyt_old_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="41dp"
            android:layout_marginRight="41dp"
            android:layout_marginTop="41dp"
            android:background="@drawable/selector_login_edit">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_password"
                android:minEms="4"
                android:layout_marginLeft="28dp"/>

            <EditText
                android:id="@+id/et_old_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/old_password_hint"
                android:singleLine="true"
                android:textColor="#8A000000"
                android:inputType="textPassword"
                android:textColorHint="@color/text_common_hint"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rlyt_new_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="41dp"
            android:layout_marginRight="41dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/selector_login_edit">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:minEms="4"
                android:layout_marginLeft="28dp"/>

            <EditText
                android:id="@+id/et_new_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/new_password_hint"
                android:singleLine="true"
                android:inputType="textPassword"
                android:textColor="#8A000000"
                android:textColorHint="@color/text_common_hint"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rlyt_new_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="41dp"
            android:layout_marginRight="41dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/selector_login_edit">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minEms="4"
                android:text="@string/new_passwrod_confirm"
                android:layout_marginLeft="28dp"/>

            <EditText
                android:id="@+id/et_new_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/new_passwrod_confirm_hint"
                android:singleLine="true"
                android:textColor="#8A000000"
                android:textColorHint="@color/text_common_hint"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </LinearLayout>



    </LinearLayout>


</ScrollView>
</LinearLayout>