<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llyt_this"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <!-- 标题栏 -->
    <net.doyouhike.app.bbs.ui.widget.common.TitleView
        android:layout_width="match_parent"
        android:layout_height="@dimen/vi_activity_navi_height"
        app:left_src="@drawable/ic_back_3x"
        app:left_text="@string/roll_back"
        app:m_title="@string/personal_message_title" />


    <!-- 昵称 -->

    <RelativeLayout
        android:id="@+id/rlyt_setting_nickname"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/selector_list_item_bg"
        android:clickable="false"
        android:paddingLeft="17dp">

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/nickname"
            android:textColor="@color/txt_content"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_setting_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="17dp"
            android:text="@string/nickname"
            android:textColor="#FF030303"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_divider" />
    </RelativeLayout>

    <!-- 性别 -->

    <RelativeLayout
        android:id="@+id/rlyt_setting_gender"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/selector_list_item_bg"
        android:paddingLeft="17dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/gender"
            android:textColor="@color/txt_content"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_setting_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="17dp"
            android:text="@string/gender_girl"
            android:textColor="#FF030303"
            android:textSize="15sp" />

    </RelativeLayout>

    <!-- 手机号 -->

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:id="@+id/rlyt_setting_phone_number"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/selector_list_item_bg"
        android:paddingLeft="17dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/phone_number"
            android:textColor="@color/txt_content"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/llty_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bind_number"
                android:textColor="@color/clickable"
                android:textSize="15sp" />

            <ImageView
                style="@style/vi_setting_main_item_arrow"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/color_divider" />
    </RelativeLayout>

    <!-- 城市 -->

    <RelativeLayout
        android:id="@+id/rlyt_setting_city"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/selector_list_item_bg"
        android:paddingLeft="17dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/city"
            android:textColor="@color/txt_content"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_setting_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="17dp"
            android:text="@string/city_hint"
            android:textColor="#FF030303"
            android:textSize="15sp" />

    </RelativeLayout>

    <!-- 签名 -->

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:id="@+id/rlyt_setting_signature"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@drawable/selector_list_item_bg"
        android:paddingLeft="17dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/profile_title"
            android:textColor="@color/txt_content"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_setting_signature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="200dp"
                android:singleLine="true"
                android:textColor="#FF030303"
                android:textSize="15sp" />

            <ImageView
                style="@style/vi_setting_main_item_arrow"/>
        </LinearLayout>
    </RelativeLayout>


</LinearLayout>